--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 drain
--e git://github.com/potash/scikit-learn@merged/balanced-random-forest#egg=scikit-learn
+git+https://github.com/potash/scikit-learn@merged/balanced-random-forest#egg=scikit-learn
